# ci-demo

./: .gitmodules  CMakeLists.txt  CMakePresets.json  main.cpp  vcpkg.json
.github/workflows/: ci.yml
workspace/: vcpkg-x64-linux.txt  vcpkg.json
